# knipser

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  knipser.c  knipser.h  main.c  tray.c  tray.h  wayland.c  wayland.h
.github/workflows/: build.yml
docker/: dockerfile
wayland-protocols/: wlr-output-management-unstable-v1-client-protocol.h
